# chain-trust

./: .env.example  .gitignore  AGENTS.md  FEATURES.md  README.md  audit_progress.md  audit_traces.md  docker-compose.dev.yml  docker-compose.yml  dual_audit_progress.md  fix_plan.md  nginx.conf  run-demo.py  setup.py  uiux_fix_plan.md
ai-service/: .env.example  .gitignore  Dockerfile  agent.py  config.py  database.py  main.py  models.py  prompts.py  pyproject.toml  service.py  sse.py  store.py  tool_store.py  tools.py
ai-service/tutorials/: customer-agent.md  customer-cabinet-id.md  customer-cabinet.md  customer-dashboard.md  customer-notifications.md  customer-prescriptions.md  customer-settings.md  manufacturer-agent.md  manufacturer-analytics-scans.md  manufacturer-analytics.md  manufacturer-batches-id.md  manufacturer-batches-new.md  manufacturer-batches.md  manufacturer-dashboard.md  manufacturer-notifications.md  manufacturer-products-new.md  manufacturer-products.md  manufacturer-settings.md  verify.md
ai-service/utils/: file_reader.py  json_helpers.py
backend/: .env.example  .gitignore  Dockerfile  index.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
backend/abis/: ChainTrust.json  product.abi.json
backend/config/: blockchain.config.ts  config.ts  db.config.ts  nodemailer.config.ts
backend/contracts/: ChainTrust.json  (+1 more)
contracts/: ChainTrust.sol  abi.json  bytecode
frontend/: .env.example  Dockerfile  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  tailwind.config.ts  tsconfig.json
(+240 files in other folders)
