[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "pyjwt>=2.10.1",
]
