[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.82",
    "chardet>=5.2.0,<6.0.0",
    "fastapi[standard]>=0.135.0",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "pillow>=12.2.0",
    "pyjwt>=2.10.1",
    "pymupdf>=1.27.2.2",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
]
